--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     <h3>Navigation</h3>
     <ul>
       <li><a href="https://21cookej.github.io/raftclient">RaftClient V4</a></li>
+      <li><a href="https://21cookej.github.io/jump">LickMe.com</a></li>
       <li><a href="https://21cookej.github.io/bootmenu">Eaglercraft Bootmenu</a></li>
       <li><a href="https://21cookej.github.io/coin-crusade">Coin Crusade</a></li>
       <li><a href="https://21cookej.github.io/hacked">Eaglercraft Hacked</a></li>
@@ -107,7 +108,7 @@
       <li><a href="https://21cookej.github.io/button">Button</a></li>
       <li><a href="https://21cookej.github.io/translator">Translator</a></li>
       <li><a href="https://21cookej.github.io/tethmetic">Tethmetic Generator</a></li>
-      <li><a href="https://21cookej.github.io/tim-till-death">Time Till Death</a></li>
+      <li><a href="https://21cookej.github.io/time-till-death">Time Till Death</a></li>
       <li><a href="https://21cookej.github.io/tone">High Pitch Tone Generator</a></li>
       <li><a href="https://21cookej.github.io/centreofmass">Center Of Mass</a></li>
       <li><a href="https://github.com">GitHub</a></li>
