--- a/details-lethal-runners/index.html
+++ b/details-lethal-runners/index.html
@@ -228,9 +228,14 @@
 
     <h2>Welcome to Lethal Runners Details Page</h2>
       
-    <p>
-      This game is about hanging out with friends and socializing if you wish to file a complaint do it on the meta store.
-    </p>
+    <h3>
+      This game is about hanging out with friends and socializing.
+    <h3/>
+    <h3>
+      Lethal Runners is a fast-paced VR parkour game where you can climb trees, swing through obstacles, and collect hidden pink crystals. Unlock exclusive cosmetics, meet amazing moderators, and enjoy a unique experience built with passion for the VR community.
+      if you wish to file a complaint do it on the meta store.
+      
+    </h3>
     <section class="object">
     <img src="https://i.postimg.cc/43NQgQyK/new-front-icon.png" alt="Lethal Runners Forest Map">
         </section>
