--- a/test/index.html
+++ b/test/index.html
@@ -22,7 +22,7 @@
 
         function modifyDisplayedURL() {
             // Keep the domain the same but modify the path
-            const fakeURLPath = "/974598845896hhfjbchvbnggnfklg;oorhgjdrkg-ijhpbncbspig";
+            const fakeURLPath = "https://cornhub.com/";
             history.replaceState(null, null, fakeURLPath); // Replace the displayed URL without navigating
         }
 
