--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <h3>Navigation</h3>
     <ul>
       <li><a href="https://21cookej.github.io/raftclient">RaftClient V4</a></li>
-      <li><a href="https://21cookej.github.io/jump">LickMe.com</a></li>
+      <li><a href="https://21cookej.github.io/jump">Funny thing</a></li>
       <li><a href="https://21cookej.github.io/bootmenu">Eaglercraft Bootmenu</a></li>
       <li><a href="https://21cookej.github.io/coin-crusade">Coin Crusade</a></li>
       <li><a href="https://21cookej.github.io/hacked">Eaglercraft Hacked</a></li>
@@ -111,8 +111,7 @@
       <li><a href="https://21cookej.github.io/time-till-death">Time Till Death</a></li>
       <li><a href="https://21cookej.github.io/tone">High Pitch Tone Generator</a></li>
       <li><a href="https://21cookej.github.io/centreofmass">Center Of Mass</a></li>
-      <li><a href="https://github.com">GitHub</a></li>
-      <li><a href="https://wikipedia.org">Wikipedia</a></li>
+      <li><a href="https://github.com/21cookej/">My GitHub</a></li>
     </ul>
   </div>
 
