--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
     <h3>Navigation</h3>
     <ul>
       <li><a href="https://21cookej.github.io/raftclient">RaftClient V4</a></li>
+      <li><a href="https://21cookej.github.io/name-match">Name Match</a></li>
       <li><a href="https://21cookej.github.io/jump">Funny thing</a></li>
       <li><a href="https://21cookej.github.io/bootmenu">Eaglercraft Bootmenu</a></li>
       <li><a href="https://21cookej.github.io/coin-crusade">Coin Crusade</a></li>
@@ -110,7 +111,6 @@
       <li><a href="https://21cookej.github.io/tethmetic">Tethmetic Generator</a></li>
       <li><a href="https://21cookej.github.io/time-till-death">Time Till Death</a></li>
       <li><a href="https://21cookej.github.io/tone">High Pitch Tone Generator</a></li>
-      <li><a href="https://21cookej.github.io/centreofmass">Center Of Mass</a></li>
       <li><a href="https://github.com/21cookej/">My GitHub</a></li>
     </ul>
   </div>
