--- a/name-match/index.html
+++ b/name-match/index.html
@@ -79,6 +79,14 @@
       "dan+toby": {
         percent: 5,
         message: "😬 Oof... maybe stick to being friends."
+      },
+      "louis+dan": {
+        percent: 69,
+        message: "💨 Creative thinking with that pose."
+      },
+      "yves+georgia": {
+        percent: 1000,
+        message: "🍆 Lets do it in a bath room stall."
       }
     };
 
