--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
     <ul>
       <li><a href="https://21cookej.github.io/raftclient">RaftClient V4</a></li>
       <li><a href="https://21cookej.github.io/name-match">Name Match</a></li>
+      <li><a href="https://movie-web-better.vercel.app/">Movie Website</a></li>
       <li><a href="https://21cookej.github.io/jump">Funny thing</a></li>
       <li><a href="https://21cookej.github.io/bootmenu">Eaglercraft Bootmenu</a></li>
       <li><a href="https://21cookej.github.io/coin-crusade">Coin Crusade</a></li>
@@ -107,8 +108,6 @@
       <li><a href="https://21cookej.github.io/lethal-runners">Lethal Runners VR Homepage</a></li>
       <li><a href="https://21cookej.github.io/eaglerforge">Eaglerforge Modded</a></li>
       <li><a href="https://21cookej.github.io/button">Button</a></li>
-      <li><a href="https://21cookej.github.io/translator">Translator</a></li>
-      <li><a href="https://21cookej.github.io/tethmetic">Tethmetic Generator</a></li>
       <li><a href="https://21cookej.github.io/time-till-death">Time Till Death</a></li>
       <li><a href="https://21cookej.github.io/tone">High Pitch Tone Generator</a></li>
       <li><a href="https://github.com/21cookej/">My GitHub</a></li>
