--- a/index.html
+++ b/index.html
@@ -107,9 +107,8 @@
       <li><a href="https://21cookej.github.io/level-devil">Level Devil</a></li>
       <li><a href="https://21cookej.github.io/lethal-runners">Lethal Runners VR Homepage</a></li>
       <li><a href="https://21cookej.github.io/eaglerforge">Eaglerforge Modded</a></li>
-      <li><a href="https://21cookej.github.io/button">Button</a></li>
-      <li><a href="https://21cookej.github.io/time-till-death">Time Till Death</a></li>
-      <li><a href="https://21cookej.github.io/tone">High Pitch Tone Generator</a></li>
+      <li><a href="https://21cookej.github.io/1.12">Eaglercraft 1.12</a></li>
+      <li><a href="https://21cookej.github.io/eaglerforgebuilder">Eaglerforge Mod Builder</a></li>
       <li><a href="https://github.com/21cookej/">My GitHub</a></li>
     </ul>
   </div>
@@ -156,3 +155,4 @@
 
 </body>
 </html>
+
