--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
       <li><a href="https://21cookej.github.io/raftclient">RaftClient V4</a></li>
       <li><a href="https://21cookej.github.io/name-match">Name Match</a></li>
       <li><a href="https://movie-web-better.vercel.app/">Movie Website</a></li>
-      <li><a href="https://21cookej.github.io/jump">Funny thing</a></li>
+      <li><a href="https://21cookej.github.io/pixel">Sand Tetris</a></li>
       <li><a href="https://21cookej.github.io/bootmenu">Eaglercraft Bootmenu</a></li>
       <li><a href="https://21cookej.github.io/coin-crusade">Coin Crusade</a></li>
       <li><a href="https://21cookej.github.io/hacked">Eaglercraft Hacked</a></li>
@@ -155,4 +155,5 @@
 
 </body>
 </html>
+
 
