--- a/index.html
+++ b/index.html
@@ -97,17 +97,13 @@
   <div id="sidebar" onmouseleave="closeSidebar()">
     <h3>Navigation</h3>
     <ul>
-      <li><a href="https://21cookej.github.io/raftclient">RaftClient V4</a></li>
+      <li><a href="https://minecraft-eaglercraft-launcher.vercel.app/">Eaglercraft Launcher</a></li>
       <li><a href="https://21cookej.github.io/name-match">Name Match</a></li>
       <li><a href="https://movie-web-better.vercel.app/">Movie Website</a></li>
       <li><a href="https://21cookej.github.io/pixel">Sand Tetris</a></li>
-      <li><a href="https://21cookej.github.io/bootmenu">Eaglercraft Bootmenu</a></li>
       <li><a href="https://21cookej.github.io/coin-crusade">Coin Crusade</a></li>
-      <li><a href="https://21cookej.github.io/hacked">Eaglercraft Hacked</a></li>
       <li><a href="https://21cookej.github.io/level-devil">Level Devil</a></li>
       <li><a href="https://21cookej.github.io/lethal-runners">Lethal Runners VR Homepage</a></li>
-      <li><a href="https://21cookej.github.io/eaglerforge">Eaglerforge Modded</a></li>
-      <li><a href="https://21cookej.github.io/1.12">Eaglercraft 1.12</a></li>
       <li><a href="https://21cookej.github.io/eaglerforgebuilder">Eaglerforge Mod Builder</a></li>
       <li><a href="https://github.com/21cookej/">My GitHub</a></li>
     </ul>
@@ -155,5 +151,6 @@
 
 </body>
 </html>
+
 
 
