--- a/index.html
+++ b/index.html
@@ -128,6 +128,9 @@
     <h3>Navigation</h3>
     <ul>
       <li><a href="https://minecraft-eaglercraft-launcher.vercel.app/">Eaglercraft Launcher</a></li>
+      <li><a href="https://21cookej.github.io/screen-share">Screen Share</a></li>
+      <li><a href="https://21cookej.github.io/best-games">Best games</a></li>
+      <li><a href="https://21cookej.github.io/edgenotfound">EdgeNotFound</a></li>
       <li><a href="https://21cookej.github.io/name-match">Name Match</a></li>
       <li><a href="https://movie-web-better.vercel.app/">Movie Website</a></li>
       <li><a href="https://21cookej.github.io/pixel">Sand Tetris</a></li>
@@ -180,6 +183,7 @@
 
 </body>
 </html>
+
 
 
 
