--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
     <ul>
       <li><a href="https://minecraft-eaglercraft-launcher.vercel.app/">Eaglercraft Launcher</a></li>
       <li><a href="https://21cookej.github.io/screen-share">Screen Share</a></li>
+      <li><a href="https://21cookej.github.io/grindcraft">Grind Craft</a></li>
       <li><a href="https://21cookej.github.io/best-games">Best games</a></li>
       <li><a href="https://21cookej.github.io/edgenotfound">EdgeNotFound</a></li>
       <li><a href="https://21cookej.github.io/name-match">Name Match</a></li>
@@ -183,6 +184,7 @@
 
 </body>
 </html>
+
 
 
 
