--- a/camo/index.html
+++ b/camo/index.html
@@ -22,7 +22,7 @@
 
     video {
       position: absolute;
-      top: 0;
+      top: -32%;
       left: 0;
       pointer-events: none;
       transform-origin: top left;
