--- a/camo/index.html
+++ b/camo/index.html
@@ -22,10 +22,10 @@
 
     video {
       position: absolute;
-      top: -16%;
+      top: -120px;
       left: 0;
       pointer-events: none;
-      transform-origin: top left;
+      transform-origin: center;
     }
 
     #startBtn {
