--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   <div id="sidebar" onmouseleave="closeSidebar()">
     <h3>Navigation</h3>
     <ul>
-      <li><a href="https://minecraft-eaglercraft-launcher.vercel.app/">Eaglercraft Launcher</a></li>
+      <li><a href="https://cool-launcher.vercel.app/">Eaglercraft Launcher</a></li>
       <li><a href="https://21cookej.github.io/grindcraft">Grind Craft</a></li>
       <li><a href="https://21cookej.github.io/best-games">Best games</a></li>
       <li><a href="https://21cookej.github.io/edgenotfound">EdgeNotFound</a></li>
@@ -183,6 +183,7 @@
 
 </body>
 </html>
+
 
 
 
