--- a/name-match/index.html
+++ b/name-match/index.html
@@ -72,7 +72,7 @@
   <script>
     const customMatches = [
       { names: ["louis", "toby"], percent: 1000, message: "🍆 Meant to be inside each other. Get the pregnancy test NOW!", color: "rainbow" },
-      { names: ["chloe", "james"], gender1: "female", gender2: "male", percent: 1000, message: "🌹 get the roses", color: "rainbow" },
+      { names: ["mia", "james"], gender1: "female", gender2: "male", percent: 100, message: "🌹 get the roses you going to prom", color: "#69f0ae" },
       { names: ["james", "james"], gender1: "male", gender2: "male", percent: 1000, message: "You can cope with your self", color: "rainbow" },
       { names: ["georgia", "yves"], percent: 999, message: "🍆 Let's do it in a bathroom stall.", color: "#ff00ff" },
       { names: ["toby", "yves"], percent: 100, message: "💑 A classic fairytale couple!" },
