Update title and headings for GCSE past papers

--- a/past-papers-gcse/index.html
+++ b/past-papers-gcse/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Categories & Links</title>
+  <title>School Revision Past Papers GCSE</title>
   <style>
     :root{ --bg:#0f1724; --card:#111827; --muted:#9ca3af; --accent:#60a5fa; --glass: rgba(255,255,255,0.03);} 
     *{box-sizing:border-box;font-family:Inter,system-ui,Segoe UI,Roboto,Arial}
@@ -43,7 +43,7 @@
 <body>
   <div class="app" role="application">
     <header>
-      <h1>Categories & Links</h1>
+      <h1>School Revision Past Papers GCSE</h1>
       <div class="controls"></div>
     </header>
 
@@ -61,10 +61,10 @@
       <main class="content">
         <div style="display:flex;align-items:center;justify-content:space-between">
           <div>
-            <strong id="selectedTitle">(no category)</strong>
-            <div class="small muted">Click a category to view links</div>
+            <strong id="selectedTitle"></strong>
+            <div class="small muted"></div>
           </div>
-          <div class="small muted">Links: <span id="linksCount">0</span></div>
+          <div class="small muted"><span id="linksCount"></span></div>
         </div>
 
         <div class="links" id="linksArea" style="margin-top:12px"></div>
@@ -80,7 +80,7 @@
       categories: [
         {
           id: 'school-revision',
-          name: 'School Revision Past Papers GCSE',
+          name: 'Revision Past Papers GCSE',
           links: [
             { id: 'l1', title: 'Maths Higher AQA GCSE Past Papers', url: 'https://revisionmaths.com/gcse-maths/gcse-maths-past-papers/aqa-gcse-maths-past-papers' },
             { id: 'l2', title: 'Computing Higher AQA GCSE Past Papers', url: 'https://revisionworld.com/gcse-revision/ict/past-papers/aqa-gcse-computer-science-past-papers' },
