--- a/index.html
+++ b/index.html
@@ -127,6 +127,8 @@
   <div id="sidebar" onmouseleave="closeSidebar()">
     <h3>Navigation</h3>
     <ul>
+      
+      <li><a href="https://21cookej.github.io/past-papers-gcse/">Past Paper Revision Links</a></li>
       <li><a href="https://cool-launcher.vercel.app/">Eaglercraft Launcher</a></li>
       <li><a href="https://21cookej.github.io/grindcraft">Grind Craft</a></li>
       <li><a href="https://21cookej.github.io/best-games">Best games</a></li>
@@ -183,6 +185,7 @@
 
 </body>
 </html>
+
 
 
 
