--- a/past-papers-gcse/index.html
+++ b/past-papers-gcse/index.html
@@ -85,11 +85,17 @@
           links: [
             { id: 'l1', title: 'Maths Higher AQA GCSE Past Papers', url: 'https://revisionmaths.com/gcse-maths/gcse-maths-past-papers/aqa-gcse-maths-past-papers' },
             { id: 'l2', title: 'Computing Higher AQA GCSE Past Papers', url: 'https://revisionworld.com/gcse-revision/ict/past-papers/aqa-gcse-computer-science-past-papers' },
-            { id: 'l3', title: 'Biology Higher AQA GCSE Past Papers', url: 'https://revisionscience.com/gcse-revision/biology/biology-gcse-past-papers/aqa-gcse-biology-past-papers' },
-            { id: 'l4', title: 'English Liturature AQA GCSE Past Papers', url: 'https://revisionworld.com/a2-level-level-revision/english-literature-gcse-level/english-literature-gcse-past-papers/aqa-gcse-english-literature-past-papers' },
-            { id: 'l5', title: 'English Language AQA GCSE Past Papers', url: 'https://revisionworld.com/a2-level-level-revision/english-language-gcse-level/english-language-gcse-past-papers/aqa-gcse-english-language-past-papers' },
-            { id: 'l6', title: 'Physics Higher AQA GCSE Past Papers', url: 'https://revisionscience.com/gcse-revision/physics/physics-gcse-past-papers/aqa-gcse-physics-past-papers' },
-            { id: 'l7', title: 'Economics AQA GCSE Past Papers', url: 'https://www.savemyexams.com/gcse/economics/aqa/past-papers/' }
+            { id: 'l3', title: 'English Liturature AQA GCSE Past Papers', url: 'https://revisionworld.com/a2-level-level-revision/english-literature-gcse-level/english-literature-gcse-past-papers/aqa-gcse-english-literature-past-papers' },
+            { id: 'l4', title: 'English Language AQA GCSE Past Papers', url: 'https://revisionworld.com/a2-level-level-revision/english-language-gcse-level/english-language-gcse-past-papers/aqa-gcse-english-language-past-papers' },
+            { id: 'l5', title: 'Biology Higher & Foundation AQA GCSE Past Papers', url: 'https://revisionscience.com/gcse-revision/biology/biology-gcse-past-papers/aqa-gcse-biology-past-papers' },
+            { id: 'l6', title: 'Physics Higher & Foundation AQA GCSE Past Papers', url: 'https://revisionscience.com/gcse-revision/physics/physics-gcse-past-papers/aqa-gcse-physics-past-papers' },
+            { id: 'l7', title: 'Chemistry Higher & Foundation AQA GCSE Past Papers', url: 'https://revisionscience.com/gcse-revision/chemistry/chemistry-gcse-past-papers/aqa-gcse-chemistry-past-papers' },
+            { id: 'l8', title: 'Economics AQA GCSE Past Papers', url: 'https://www.savemyexams.com/gcse/economics/aqa/past-papers/' },
+            { id: 'l9', title: 'Geography AQA GCSE Past Papers', url: 'https://revisionworld.com/gcse-revision/geography/geography-gcse-past-papers/aqa-gcse-geography-past-papers' },
+            { id: 'l10', title: 'Business AQA GCSE Past Papers', url: 'https://revisionworld.com/gcse-revision/business-studies/business-studies-gcse-past-papers/aqa-gcse-business-studies-past-papers' },
+            { id: 'l11', title: 'French AQA GCSE Past Papers', url: 'https://revisionworld.com/gcse-revision/french/french-gcse-past-papers/aqa-gcse-french-past-papers' },
+            { id: 'l12', title: 'German AQA GCSE Past Papers', url: 'https://revisionworld.com/gcse-revision/german/past-papers/aqa-gcse-german-past-papers' },
+            { id: 'l13', title: 'Spanish AQA GCSE Past Papers', url: 'https://revisionworld.com/gcse-revision/spanish/spanish-gcse-past-papers/aqa-gcse-spanish-past-papers#google_vignette' }
           ]
         }
       ]
