--- a/past-papers-gcse/index.html
+++ b/past-papers-gcse/index.html
@@ -83,7 +83,7 @@
           id: 'school-revision',
           name: 'Revision Past Papers GCSE',
           links: [
-            { id: 'l1', title: 'Maths Higher AQA GCSE Past Papers', url: 'https://revisionmaths.com/gcse-maths/gcse-maths-past-papers/aqa-gcse-maths-past-papers' },
+            { id: 'l1', title: 'Maths Higher & Foundation AQA GCSE Past Papers', url: 'https://revisionmaths.com/gcse-maths/gcse-maths-past-papers/aqa-gcse-maths-past-papers' },
             { id: 'l2', title: 'Computing Higher AQA GCSE Past Papers', url: 'https://revisionworld.com/gcse-revision/ict/past-papers/aqa-gcse-computer-science-past-papers' },
             { id: 'l3', title: 'English Liturature AQA GCSE Past Papers', url: 'https://revisionworld.com/a2-level-level-revision/english-literature-gcse-level/english-literature-gcse-past-papers/aqa-gcse-english-literature-past-papers' },
             { id: 'l4', title: 'English Language AQA GCSE Past Papers', url: 'https://revisionworld.com/a2-level-level-revision/english-language-gcse-level/english-language-gcse-past-papers/aqa-gcse-english-language-past-papers' },
