--- a/coin-crusade/index.html
+++ b/coin-crusade/index.html
@@ -1,13 +1,33 @@
-<html lang="en" >
+<!DOCTYPE html>
+<html lang="en">
 <head>
-	<meta charset="UTF-8">
-	title CodePen - game
-	<link rel="stylesheet" href="./style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Coin Crusade</title>
+    <style>
+        body {
+            margin: 0;
+            padding: 20px;
+            background-color: #0E0000;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            font-family: Arial, sans-serif;
+        }
+        img {
+            max-width: 100%;
+            height: auto;
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
-<!-- partial:index.partial.html -->
-h2 Simple JavaScript Game
-//<img src="https://see.fontimg.com/api/renderfont4/x3BLm/eyJyIjoiZnMiLCJoIjo2MiwidyI6MTAwMCwiZnMiOjYyLCJmZ2MiOiIjRkZDRDI2IiwiYmdjIjoiIzBFMDAwMCIsInQiOjF9/Q29pbiBDcnVzYWRl/stepalange.png" alt="Description of image">
-	script src="./script.js"
+    <img src="https://see.fontimg.com/api/renderfont4/x3BLm/eyJyIjoiZnMiLCJoIjo2MiwidyI6MTAwMCwiZnMiOjYyLCJmZ2MiOiIjRkZDRDI2IiwiYmdjIjoiIzBFMDAwMCIsInQiOjF9/Q29pbiBDcnVzYWRl/stepalange.png" alt="Coin Crusade Logo">
+    
+    <script>
+        console.log('Page loaded successfully!');
+    </script>
 </body>
 </html>
