--- a/coin-crusade/index.html
+++ b/coin-crusade/index.html
@@ -1,33 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coin Crusade</title>
-    <style>
-        body {
-            margin: 0;
-            padding: 20px;
-            background-color: #0E0000;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            min-height: 100vh;
-            font-family: Arial, sans-serif;
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-            margin-bottom: 20px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>Coin Crusade</title>
+  <link rel="stylesheet" href="./style.css">
+
 </head>
 <body>
-    <img src="https://see.fontimg.com/api/renderfont4/x3BLm/eyJyIjoiZnMiLCJoIjo2MiwidyI6MTAwMCwiZnMiOjYyLCJmZ2MiOiIjRkZDRDI2IiwiYmdjIjoiIzBFMDAwMCIsInQiOjF9/Q29pbiBDcnVzYWRl/stepalange.png" alt="Coin Crusade Logo">
-    
-    <script>
-        console.log('Page loaded successfully!');
-    </script>
+<!-- partial:index.partial.html -->
+<html lang="en" >
+<head>
+<meta charset="UTF-8">
+<title>CodePen - game</title><link rel="stylesheet" href="./style.css">
+</head>
+<body>
+<!-- partial:index.partial.html -->
+<h2>Simple JavaScript Game</h2><img src="https://see.fontimg.com/api/renderfont4/x3BLm/eyJyIjoiZnMiLCJoIjo2MiwidyI6MTAwMCwiZnMiOjYyLCJmZ2MiOiIjRkZDRDI2IiwiYmdjIjoiIzBFMDAwMCIsInQiOjF9/Q29pbiBDcnVzYWRl/stepalange.png" alt="Description of image">
+<script>src="./script.js"</script></body>
+</html>
+<!-- partial -->
+  <script  src="./script.js"></script>
+
 </body>
 </html>
