Add new name match entry for Katie and James

--- a/name-match/index.html
+++ b/name-match/index.html
@@ -80,7 +80,8 @@
       { names: ["dan", "toby"], percent: 5, message: "😬 Oof... maybe stick to being friends." },
       { names: ["laoura", "sonny"], percent: 10000, message: "🍆 Stick it in me when it's hard." },
       { names: ["sid", "null"], percent: 100, message: "🚫 skibidy sigma.", color: "red" },
-      { names: ["dave", "hello"], gender1: "female", gender2: "male", percent: 90, message: "Hello", color: "#3399ff" }
+      { names: ["dave", "hello"], gender1: "female", gender2: "male", percent: 90, message: "Hello", color: "#3399ff" },
+      { names: ["katie", "james"], gender1: "female", gender2: "male", percent: 100, message: "❤ Come to prom with me ❤", color: "rainbow" },
     ];
 
     function normalize(name) {
