--- a/index.html
+++ b/index.html
@@ -138,6 +138,13 @@
       <li><a href="https://21cookej.github.io/pixel">Sand Tetris</a></li>
       <li><a href="https://21cookej.github.io/coin-crusade">Coin Crusade</a></li>
       <li><a href="https://21cookej.github.io/level-devil">Level Devil</a></li>
+      <li><a href="https://21cookej.github.io/infinite">Infinite</a></li>
+      <li><a href="https://21cookej.github.io/translator">Translator</a></li>
+      <li><a href="https://21cookej.github.io/ripple">Ripple</a></li>
+      <li><a href="https://21cookej.github.io/time-till-death">Time Till Death</a></li>
+      <li><a href="https://21cookej.github.io/tone">Tone</a></li>
+      <li><a href="https://21cookej.github.io/jump">The Thing</a></li>
+      <li><a href="https://21cookej.github.io/hacked">Hacked</a></li>
       <li><a href="https://21cookej.github.io/lethal-runners">Lethal Runners VR Homepage</a></li>
       <li><a href="https://github.com/21cookej/">My GitHub</a></li>
     </ul>
@@ -185,6 +192,7 @@
 
 </body>
 </html>
+
 
 
 
