--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
       <li><a href="https://21cookej.github.io/past-papers-gcse/">Past Paper Revision Links</a></li>
       <li><a href="https://cool-launcher.vercel.app/">Eaglercraft Launcher</a></li>
       <li><a href="https://21cookej.github.io/grindcraft">Grind Craft</a></li>
-      <li><a href="https://21cookej.github.io/best-games">Best games</a></li>
+      <li><a href="https://21cookej.github.io/best-games/projects/">Best games</a></li>
       <li><a href="https://21cookej.github.io/edgenotfound">EdgeNotFound</a></li>
       <li><a href="https://21cookej.github.io/name-match">Name Match</a></li>
       <li><a href="https://movie-web-better.vercel.app/">Movie Website</a></li>
@@ -192,6 +192,7 @@
 
 </body>
 </html>
+
 
 
 
