--- a/index.html
+++ b/index.html
@@ -145,6 +145,7 @@
       <li><a href="https://21cookej.github.io/tone">Tone</a></li>
       <li><a href="https://21cookej.github.io/jump">The Thing</a></li>
       <li><a href="https://21cookej.github.io/hacked">Hacked</a></li>
+      <li><a href="https://21cookej.github.io/simulation">Fluid Simulation</a></li>
       <li><a href="https://21cookej.github.io/lethal-runners">Lethal Runners VR Homepage</a></li>
       <li><a href="https://github.com/21cookej/">My GitHub</a></li>
     </ul>
@@ -192,6 +193,7 @@
 
 </body>
 </html>
+
 
 
 
