--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
   <div id="sidebar" onmouseleave="closeSidebar()">
     <h3>Navigation</h3>
     <ul>
-      
+      <li><a href="https://21cookej.github.io/interactive-ai/">Interactive AI</a></li>
       <li><a href="https://21cookej.github.io/past-papers-gcse/">Past Paper Revision Links</a></li>
       <li><a href="https://cool-launcher.vercel.app/">Eaglercraft Launcher</a></li>
       <li><a href="https://21cookej.github.io/grindcraft">Grind Craft</a></li>
@@ -193,6 +193,7 @@
 
 </body>
 </html>
+
 
 
 
