Uncomment API Key input field in index.html

--- a/interactive-ai/index.html
+++ b/interactive-ai/index.html
@@ -367,7 +367,7 @@
         <div class="control-group">
 <!--             <label>API Key</label> -->
             <div class="api-key-section">
-<!--                 <input type="password" id="apiKeyInput" placeholder="Enter OpenRouter API Key" style="padding: 8px; border-radius: 6px; border: 1px solid #d1d5db;"> -->
+                <input type="password" id="apiKeyInput" placeholder="Enter OpenRouter API Key" style="padding: 8px; border-radius: 6px; border: 1px solid #d1d5db;">
 <!--                 <button class="fetch-key-btn" onclick="fetchApiKeyFromDrive()">Fetch from Drive</button> -->
             </div>
             <div id="keyStatus" style="margin-top: 10px; font-size: 12px;"></div>
